<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/City_location_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@drawable/cairo_location"
            android:scaleType="centerCrop"
            tools:ignore="contentDescription"/>

        <TextView
            android:id="@+id/City_location_image_click"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="#A5A2C6"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/Events_click"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/events"
            android:gravity="center"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textSize="50sp"
            android:textColor="@color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="#A5A2C6"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/places_click"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/places"
            android:gravity="center"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textSize="50sp"
            android:textColor="@color/white"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardBackgroundColor="#A5A2C6"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/Resturants_click"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/resturants"
            android:gravity="center"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textSize="50sp"
            android:textColor="@color/white"/>

    </androidx.cardview.widget.CardView>

</LinearLayout>